<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Okra</string>
    <string name="title_my_setting">My settings</string>
    <string name="title_terms_and_condition"><![CDATA[Terms & conditions]]></string>
    <string name="title_about_us">About us</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_faq">FAQ</string>
    <string name="title_notification">Notifications settings</string>
    <string name="title_measurement_setting">Measurement settings</string>
    <string name="title_connect_device">Connect device</string>
    <string name="title_my_support_request">My support request</string>
    <string name="title_my_support_request_details">Support request details</string>
    <string name="title_new_support_request">Add new request</string>
    <string name="title_reports">Generate report</string>
    <string name="title_my_account">My account</string>
    <string name="title_personal_details">Personal details</string>
    <string name="title_connected_devices">Connected devices</string>
    <string name="title_my_reminders">My reminders</string>
    <string name="title_take_medicine">Take medicine</string>
    <string name="title_test_details">Test details</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_save">Save</string>
    <string name="btn_ok" tools:ignore="Typos">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_done">Done</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_log_out">Log Out</string>
    <string name="btn_delete_account">Delete Account</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_change_password">Change password</string>
    <string name="btn_add_meal">Add Meal</string>
    <string name="btn_back_to_signin">Back to Sign In</string>
    <string name="subtitle_reports">Date range of the report cannot exceed 12 months</string>
    <string name="download">Download</string>
    <string name="date_Range">Date Range</string>
    <string-array name="file_type_array">
        <item>File Type</item>
        <item>XLSX</item>
        <item>PDF</item>
    </string-array>
    <string name="file_type">File Type</string>
    <string name="download_progress_title">Download in progress...</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in_with_okra">Sign In With Okra</string>
    <string name="create_an_account">Create an account</string>
    <string name="manage_your_account"><![CDATA[Manage your account & get the access to various services provided by the okra.]]></string>
    <string name="email_id">Email ID</string>
    <string name="email">Email</string>
    <string name="serial_no">Serial No. (Optional)</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="terms_and_condition_text">By clicking on the Sign Up option you agree
to the Okra Terms &amp; Conditions</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="allow">Allow</string>
    <string name="enter_the_email_id"><![CDATA[Enter the Email Id associated with your okra account & we will send a verification code to reset your password]]></string>
    <string name="send">Send</string>
    <string name="verification_code_successfully_sent_to_your_mail">Verification code successfully sent to your mail.</string>
    <string name="verify_your_email">Verify Your Email ID</string>
    <string name="we_have_sent_a">We have sent a 4 digit verification code to your email id:</string>
    <string name="verify_your_otp">Verify the OTP to reset your password.</string>
    <string name="verification_code">Verification Code</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="enter_ur_password">Enter your new password below. Your new password must be different from previous used passwords.</string>
    <string name="enter_ur_password_change_password">Enter your new password below. Your new password must be different from the current password.</string>
    <string name="password_instruction">Please ensure your password is at least 8 characters long and contains a special character or number.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resend_pass">Reset Password</string>
    <string name="reset_password_successfully">Reset password successfully</string>
    <string name="header_reset_password_successfully">Reset Password Successfully</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial_header_1">Ready to Simplify Diabetes?</string>
    <string name="tutorial_sub_header_1">At Okra, we believe that everyone deserves to be healthy That’s we keep our cost low</string>
    <string name="you_have_successfully">You have successfully updated your Okra account password.</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="lets_get_started_2">Let\'s Get Started</string>
    <string name="nice_to_meet_you">Nice to meet you</string>
    <string name="you_have_successfully_created">You have successfully created your Okra account.</string>
    <string name="unverified_account_message">Your OKRA account is currently unverified. Please contact the admin to verify your account.</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_home">Welcome To Home</string>
    <string name="view_profile">View Profile</string>
    <string name="phone">Phone No.</string>
    <string name="age">Age</string>
    <string name="phone_no">Phone No</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_new">Enter your new password below, your new password must be different from the current password</string>
    <string name="current_password">Current Password</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo Library</string>
    <string name="upload_image">Upload Image</string>
    <string name="in_app_notification">In app notifications</string>
    <string name="push_notification">Push notifications</string>
    <string name="hyper_blood_glucose">Hyper blood glucose value</string>
    <string name="hypo_blood_glucose">Hypo blood glucose value</string>
    <string name="blood_glucose_unit">Blood glucose unit</string>
    <string name="title_contact_us">Contact us</string>
    <string name="instruction_1">Turn off the meter if it is on.</string>
    <string name="instruction_2">Long press the left button on the front of the device (3 seconds) until the bluetooth symbol showup on the meter\'s display.</string>
    <string name="need_help">Need Help?</string>
    <string name="lets_connect">Let\'s connect your device</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_support_request">No support request</string>
    <string name="please_click">Please click on the “+” Icon to start your support request</string>
    <string name="title">Title</string>
    <string name="write_your">Write your notes…</string>
    <string name="max_char">Max. 1000 characters</string>
    <string name="description">Description</string>
    <string name="hang_tight">Hang tight!</string>
    <string name="your_message"><![CDATA[Your message is on the way tot he Okra crew & we will get back to you soon]]></string>
    <string name="bluetooth">Bluetooth</string>
    <string name="discovering">Discovering…</string>
    <string name="alert">Alert</string>
    <string name="logbook">Logbook</string>
    <string name="test_logs">Test Logs</string>
    <string name="meal_logs">Meal Logs</string>
    <string name="select_filters">Select Filters</string>
    <string name="date_range">Date Range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="testing_time">Testing Time</string>
    <string name="time_period">Time Period</string>
    <string name="display_all">Display All</string>
    <string name="before_meal">Before Meal</string>
    <string name="after_meal">After Meal</string>
    <string name="post_medicine">Post Medicine</string>
    <string name="post_workout">Post Workout</string>
    <string name="control_solution">Control Solution</string>
    <string name="reset">Reset</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="no_test_logged">No Test Logged</string>
    <string name="no_meal_logged">No Meal Logged</string>
    <string name="test_details">Test Details</string>
    <string name="edit_test_details">Edit Test Details</string>
    <string name="date">Date</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="insulin_carb">Insulin(ml)</string>
    <string name="device_id">Device ID</string>
    <string name="device_name">Device Name</string>
    <string name="delete_test">Delete Test</string>
    <string name="are_you_sure_you_want_to_delete_the_added_test">Are you sure you want to delete the added test?</string>
    <string name="successfully_updated_test_details">Successfully updated test details</string>
    <string name="your_test_details_has_been_updated_successfully">Your test details has been updated successfully</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="meal_details">Meal Details</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="food_type">Food Type</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fats">Fats</string>
    <string name="protein">Protein</string>
    <string name="delete_meal">Delete Meal</string>
    <string name="are_you_sure_you_want_to_delete_the_added_meal">Are you sure you want to delete the added meal?</string>
    <string name="edit_meal_details">Edit Meal Details</string>
    <string name="new_meal">New Meal</string>
    <string name="add_new">Add New</string>
    <string name="add_new_test">Add New Test</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="successfully_updated_meal_details">Successfully updated meal details</string>
    <string name="your_meal_details_has_been_updated_successfully">Your meal details has been updated successfully</string>
    <string name="invalid_photo">Invalid Photo</string>
    <string name="unsaved_meal">Unsaved Meal</string>
    <string name="this_does_not_look_like_photo">This does not look like photo. Would you like to retake the photo to get more accurate results?</string>
    <string name="retake">Retake</string>
    <string name="choose_your_food_item">Choose your food item</string>
    <string name="perform_diabetes_test">Perform diabetes test</string>
    <string name="food_log">Food log</string>
    <string name="time">Time</string>
    <string name="all">All</string>
    <string name="pills_inSmall">pills</string>
    <string name="mg">mg</string>
    <string name="ml">ml</string>
    <string name="unit_type">Unit Type</string>
</resources>