<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context=".ui.boarding.forgotPassword.ForgotPassActivity">


  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvHeading"
      android:layout_width="@dimen/dp_0"
      android:layout_height="wrap_content"
      android:fontFamily="@font/axiforma_semibold"
      android:layout_marginTop="@dimen/dp_130"
      android:text="@string/forgot_password"
      android:textColor="@color/black"
      android:textSize="@dimen/sp_30"
      android:paddingStart="@dimen/dp_20"
      android:paddingEnd="@dimen/dp_20"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />


  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/appCompatTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/axiforma_medium"
      android:text="@string/enter_the_email_id"
      android:textColor="@color/black_2"
      android:textSize="@dimen/sp_14"
      android:lineSpacingExtra="@dimen/dp_5"
      android:layout_marginTop="@dimen/dp_10"
      android:paddingStart="@dimen/dp_20"
      android:paddingEnd="@dimen/dp_20"
      app:layout_constraintTop_toBottomOf="@+id/tvHeading"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.appcompat.widget.AppCompatEditText
      style="@style/edit_text_style"
      android:id="@+id/etEmail"
      android:layout_height="wrap_content"
      android:background="@mipmap/bg_edittext"
      android:hint="@string/email_id"
      android:singleLine="true"
      android:layout_marginTop="@dimen/dp_20"
      android:layout_marginStart="@dimen/dp_20"
      android:layout_marginEnd="@dimen/dp_20"
      android:paddingStart="@dimen/dp_32"
      android:imeOptions="actionNext"
      android:inputType="text"
      android:maxLength="50"
      app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:ignore="RtlSymmetry" />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvErrorEmail"
      android:layout_width="@dimen/dp_0"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dp_5"
      android:fontFamily="@font/axiforma_medium"
      android:lineSpacingExtra="@dimen/dp_5"
      android:maxLines="2"
      android:visibility="gone"
      android:paddingStart="@dimen/dp_25"
      android:paddingEnd="@dimen/dp_25"
      tools:text="@string/enter_ur_password"
      android:textColor="@color/red"
      android:textSize="@dimen/sp_14"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etEmail" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnSend"
      style="@style/btn_style"
      android:layout_marginStart="@dimen/dp_0"
      android:layout_marginEnd="@dimen/dp_0"
      android:layout_width="match_parent"
      android:text="@string/send"
      android:onClick="onSendClick"
      app:layout_constraintTop_toBottomOf="@+id/tvErrorEmail"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:background="@mipmap/bg_button"
      tools:ignore="UsingOnClickInXml" />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/ivBack"
      style="@style/btn_style"
      android:layout_marginStart="-30dp"
      android:layout_marginTop="@dimen/dp_30"
      android:layout_width="wrap_content"
      android:textColor="@color/grey_3"
      android:onClick="onBackClick"
      app:layout_constraintTop_toTopOf="parent "
      app:layout_constraintStart_toStartOf="parent"
      android:background="@mipmap/back"
      />

  <ImageView
      android:id="@+id/ivImage"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_200"
      android:src="@mipmap/forgot_password"
      android:layout_marginBottom="@dimen/dp_40"
      android:layout_marginTop="@dimen/dp_30"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btnSend"
      android:contentDescription="@string/app_name" />


</androidx.constraintlayout.widget.ConstraintLayout>