<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context=".ui.MessageActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:fontFamily="@font/axiforma_semibold"
        android:lineSpacingExtra="@dimen/dp_10"
        android:text="@string/header_reset_password_successfully"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@+id/tvSubHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_20"
        android:fontFamily="@font/axiforma_medium"
        android:lineSpacingExtra="@dimen/dp_5"
        android:text="@string/you_have_successfully"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/tvHeader3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_20"
        android:fontFamily="@font/axiforma_semibold"
        android:gravity="center"
        android:text="@string/lets_get_started"
        android:textColor="@color/black_2"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubHeader" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_240"
        android:layout_marginTop="@dimen/dp_20"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/back_to_login"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader3" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        style="@style/btn_style"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dp_0"
        android:layout_marginEnd="@dimen/dp_0"
        android:background="@mipmap/bg_button"
        android:onClick="onSendClick"
        android:text="@string/btn_back_to_signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:ignore="UsingOnClickInXml" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

</androidx.constraintlayout.widget.ConstraintLayout>