<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/d_grey_top_rounded"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_5"
        android:background="@drawable/bg_button_grey_3"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/textContainer"
        android:layout_width="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/axiforma_semibold"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/select_filters"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDateRange"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:ellipsize="end"
        android:fontFamily="@font/axiforma_medium"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/date_range"
        android:textColor="@color/grey_3"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/edit_text_style"
        android:layout_width="@dimen/dp_0"
        android:id="@+id/tvMedFromDate"
        android:layout_height="wrap_content"
        android:background="@mipmap/date_input"
        android:hint="@string/from"
        android:singleLine="true"
        android:drawablePadding="@dimen/dp_5"
        android:drawableEnd="@mipmap/calendar"
        android:paddingStart="@dimen/dp_20"
        android:gravity="start|center_vertical"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@+id/tvDateRange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMedToDate"
        tools:text="2021-11-22"
        tools:ignore="RtlSymmetry"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/edit_text_style"
        android:layout_width="@dimen/dp_0"
        android:id="@+id/tvMedToDate"
        android:layout_height="wrap_content"
        android:background="@mipmap/date_input"
        android:hint="@string/to"
        android:singleLine="true"
        android:drawablePadding="@dimen/dp_5"
        android:drawableEnd="@mipmap/calendar"
        android:paddingStart="@dimen/dp_20"
        android:gravity="start|center_vertical"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/tvDateRange"
        app:layout_constraintStart_toEndOf="@id/tvMedFromDate"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="2021-11-30"
        tools:ignore="RtlSymmetry"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMedication"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:ellipsize="end"
        android:fontFamily="@font/axiforma_medium"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/unit_type"
        android:textColor="@color/grey_3"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMedFromDate"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAll"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:ellipsize="end"
        android:fontFamily="@font/axiforma_medium"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/all"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMedication"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAll"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:src="@drawable/selector_tick"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMedication"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPills"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:ellipsize="end"
        android:fontFamily="@font/axiforma_medium"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/pills_inSmall"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAll"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPills"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:src="@drawable/selector_tick"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAll"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMG"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:ellipsize="end"
        android:fontFamily="@font/axiforma_medium"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/mg"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPills"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMG"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:src="@drawable/selector_tick"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPills"
        tools:ignore="RtlSymmetry" />
 <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvML"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:ellipsize="end"
        android:fontFamily="@font/axiforma_medium"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/ml"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMG"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivML"
        style="@style/textContainer"
        android:layout_width="@dimen/dp_0"
        android:src="@drawable/selector_tick"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMG"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReset"
        style="@style/btn_style"
        android:layout_marginStart="@dimen/dp_0"
        android:layout_marginEnd="@dimen/dp_0"
        android:layout_width="@dimen/dp_0"
        android:text="@string/reset"
        android:textColor="@color/grey_4"
        app:layout_constraintTop_toBottomOf="@+id/tvML"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnMedApplyFilter"
        android:background="@mipmap/apply_filter"
        tools:ignore="UsingOnClickInXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMedApplyFilter"
        style="@style/btn_style"
        android:layout_marginStart="@dimen/dp_0"
        android:layout_marginEnd="@dimen/dp_0"
        android:layout_width="@dimen/dp_0"
        android:text="@string/apply_filter"
        android:textColor="@color/green_1"
        app:layout_constraintTop_toBottomOf="@+id/tvML"
        app:layout_constraintStart_toEndOf="@id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@mipmap/apply_filter"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>