<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context=".ui.MessageActivity">



    <include
        android:id="@+id/layout"
        layout="@layout/layout_header"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/axiforma_medium"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:textSize="@dimen/sp_14"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/dp_5"
        android:textColor="@color/grey_3"
        android:text="@string/you_have_successfully"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        android:fontFamily="@font/axiforma_semibold"
        android:textColor="@color/black_2"
        android:text="@string/lets_get_started"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_240"
        android:layout_marginTop="@dimen/dp_90"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/back_to_login"
        app:layout_constraintTop_toBottomOf="@id/layout" />


    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/layout_button"
        android:layout_marginStart="-30dp"
        android:layout_marginEnd="-30dp"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>